bingd 0.2.1
===========

* Feature search

  * Local features independent of AnnotationHub can now be searched for using
    `local.features()`
  * Searching AnnotationHub is now done using `hub.features()`, to be consistent
    with `local.features()` and `hub.metadata()` is deprecated

bingd 0.2
=========

* Feature search

  * Searching is now decoupled from annotating and calculating enrichment
	* Searching for AnnotationHub features can now be
	  conducted without an internet connection by setting
	  `online = FALSE`
	* `get.metadata()` is now `hub.metadata()`
	* `feature.search()` is now `hub.search()`
  * returns a FeatureList object

* `annotate.gwas()` now requires a FeatureList object and no longer requires
   an internet connection  
* `calc.enrichment()` can be performed with an annotated GWAS object OR
   with an unannotated GWAS object + a FeatureList object

* `features()` is now `pull.features()`, an S4 function

* ADDED unit tests